# obsidian-cli

./: Cargo.toml  README.md  README_CN.md
src/: cli.rs  main.rs
src/kernel/: config.rs  fs.rs  index.rs  mod.rs  note.rs  output.rs  search.rs  vault.rs
src/plugins/: batch.rs  bookmarks.rs  daily.rs  files.rs  links.rs  misc.rs  mod.rs  properties.rs  search.rs  tags.rs  tasks.rs  templates.rs
