[package]
name = "obscli"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast CLI for Obsidian vaults — works without the desktop app"
license = "MIT"
repository = "https://github.com/trtyr/obsidian-cli"

[[bin]]
name = "obscli"
path = "src/main.rs"
[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
# File system
walkdir = "2"
dirs = "6"
glob = "0.3"
# Markdown parsing
pulldown-cmark = "0.12"
# Regex
regex = "1"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
thiserror = "2"
# Terminal
colored = "3"
termimad = "0.30"
# Search
fuzzy-matcher = "0.3"
# Async
tokio = { version = "1", features = ["full"] }
# Hashing
sha2 = "0.10"
hex = "0.4"
# CLI table output
tabled = "0.19"
# Progress
indicatif = "0.17"
# TTY detection
is-terminal = "0.4"
